--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html {
+  font-size: 8px;
+  box-sizing: inherit;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +10,22 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@media screen and (min-width: 768px) {
+  html {
+    font-size: 9px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  html {
+    font-size: 10px;
+  }
 }
