--- a/src/components/TextinputForm.module.css
+++ b/src/components/TextinputForm.module.css
@@ -20,6 +20,7 @@
   padding: .7rem 0;
   text-align: center;
   font-size: 1.8rem;
+  transition: all 300ms;
 }
 
 .text-input:focus {
@@ -40,6 +41,7 @@
   padding: 1rem 2rem;
   border-radius: 2rem;
   cursor: pointer;
+  transition: all 300ms;
 }
 
 .submit-button:disabled {
