--- a/src/components/layout/Header.module.css
+++ b/src/components/layout/Header.module.css
@@ -1,5 +1,7 @@
 .header {
   display: flex;
   justify-content: flex-end;
-  padding: 1rem 2rem;
+  align-items: center;
+  padding: 0 2rem;
+  height: 5rem;
 }
