--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,6 +4,7 @@
   height: 100vh;
   width: 100%;
   background-color: rgb(199, 247, 231);
+  transition: all 500ms;
 }
 
 .main {
@@ -12,4 +13,20 @@
   justify-content: space-between;
   flex: 1;
   padding: 0 2%;
+}
+
+.blue {
+  background-color: rgb(100, 90, 247);
+}
+
+.green {
+  background-color: rgb(119, 211, 91);
+}
+
+.red {
+  background-color: rgb(233, 96, 96);
+}
+
+.orange {
+  background-color: rgb(255, 163, 59);
 }
