--- a/src/components/layout/Header.module.css
+++ b/src/components/layout/Header.module.css
@@ -5,3 +5,15 @@
   padding: 0 2rem;
   height: 5rem;
 }
+
+.button {
+  border: none;
+  background-color: rgb(255, 255, 255);
+  color: rgb(32, 39, 28);
+  font-weight: 600;
+  font-size: 1.5rem;
+  padding: .7rem 1.3rem;
+  border-radius: 2rem;
+  cursor: pointer;
+  transition: all 300ms;
+}
